--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,63 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$app-primary: mat-palette($mat-indigo);
+$app-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$app-warn: mat-palette($mat-red);
+
+// Create the theme object (a Sass map containing all of the palettes).
+$app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($app-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+// primary purple #202040
+// secondary purple #543864
+// accent pink #ff6363
+// accent yellow #ffbd69
+// text black #1c1c1c
+// text white #ffffff
+
+html,
+body {
+	height: 100%;
+}
+body {
+	margin: 0;
+    font-family: Roboto, 'Helvetica Neue', sans-serif;
+    color: #ffffff;
+    background-color: #202040;
+    font-size: 16px;
+    max-width: 1024px;
+    margin: 0 auto;
+	float: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 8px 0;
+}
+
+p {
+	margin: 0;
+}
