add styles and structure for menu component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,7 +44,7 @@ body {
     color: #ffffff;
     background-color: #202040;
     font-size: 16px;
-    max-width: 1024px;
+    max-width: 1024px; //todo, what happens when the screen size is 1024px
     margin: 0 auto;
 	float: none;
 }
