--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,5 +1,15 @@
-.wave-right {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+.app-profile-page {
+	.name-background {
+		border-radius: 6px;
+        width: 50%;
+        height: 72px;
+		background-color: #543864;
+		display: flex;
+		align-items: center;
+	}
+	.wave-right {
+		width: 100%;
+		display: flex;
+		justify-content: flex-end;
+	}
 }
